--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,4 +1,15 @@
 .Home{
+
+    .cards_big_div{
+        display: flex;
+    justify-content: space-between;
+
+    // margin-top: 100px;
+      margin: 20px;
+    // margin-right: 50px;
+    // margin-top: 100px;
+    // margin-bottom: 50px;
+    }
     
 
     .cards{
