--- a/src/components/Card/Topics.scss
+++ b/src/components/Card/Topics.scss
@@ -1,44 +1,34 @@
 .Topics{
-    display: flex;
-    justify-content: space-between;
-
-    // margin-top: 100px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    // width: 100%;
+    // display: flex;
+    // margin: 5px;
+    width: 500px;
+    margin: 5px;
+    padding: 10px;
     
-    a{
-        text-decoration: none;
-    }
 
-    .wrap{
-        width: 100%;
-        width: 200px;
+    background-color: rgb(104, 150, 203);
 
-        padding: 20px;
-        
+    // background-image: url("../../../public/images/process.png");
+    // background-size: cover;
 
-        background-color: rgb(104, 150, 203);
+    color:black;
+    font-weight: 500;
+    font-size: large;
 
-        // background-image: url("../../../public/images/process.png");
-        // background-size: cover;
+    -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+    border-radius: 10px;
+    height: 120px;
 
-        color:black;
+    
+    .text{
+        display: flex;
+        justify-content: center;
+        color: white;
         font-weight: 500;
         font-size: large;
-    
-        -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-        box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-        border-radius: 10px;
-        height: 150px;
-
-        .right{
-            display: flex;
-            justify-content: center;
            
-        }
     }
-    // border: 1px solid rgb(105, 105, 237);
   
 }
