--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -3,6 +3,7 @@
     .cards_big_div{
         display: flex;
     justify-content: space-between;
+    width: 100vw;
 
     // margin-top: 100px;
       margin: 20px;
