--- a/src/pages/Topic/Topic.scss
+++ b/src/pages/Topic/Topic.scss
@@ -3,3 +3,10 @@
     width: 100%;
     
 }
+
+.sidebar{
+    background-color: #C539B4;
+    border-radius: 1.25rem;
+    position: -webkit-sticky; /* Safari & IE */
+    position: sticky;
+}
