--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -41,7 +41,8 @@
                 cursor: pointer;
 
                 &:hover{
-                    background-color: #ece8ff;
+                    
+                    font-size: 14px;
                 }
 
                 .icon{
@@ -96,4 +97,8 @@
 #topicHead{
     font-size: 25px;
 }
+#topicHead:hover{
+    background-color: transparent;
+}
+
 }
