--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,9 +3,10 @@
     justify-content: space-between;
     padding: 10px;
     align-items: center;
+    background-color: black;
+    color: white;
     // border: 1px solid rgb(238, 255, 88);
     
-
     .logo{
         flex: 3;
     }
