--- a/src/pages/Topic/Topic.scss
+++ b/src/pages/Topic/Topic.scss
@@ -1,5 +1,5 @@
 .recursion{
-    display: flex;
+    // display: flex;
     width: 100%;
 
     .topicDiv{
@@ -9,8 +9,8 @@
 }
 
 .sidebar{
-    background-color: #C539B4;
-    border-radius: 1.25rem;
+    background-color: #154265;
+    // border-radius: 1.25rem;
     position: -webkit-sticky; /* Safari & IE */
     position: sticky;
 }
