--- a/src/pages/Introduction/Intro.scss
+++ b/src/pages/Introduction/Intro.scss
@@ -10,3 +10,18 @@
      }
 
 }
+
+.intro{
+  
+
+   
+.editor{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 800px;
+   margin-left: 10% ;
+   // margin-right: 100px;
+   // margin-top: 50px;
+}
+}
